# PlanificacionTareasProyecto

./: .gitignore  Config.txt  Escenario3.txt  Poliploides_PT.cpp  README.md
Escenarios/: Escenario3.txt
EvoLLM/: CMakeLists.txt  chartplotter.cpp  chartplotter.h  chromosome.cpp  chromosome.h  config.ini  evolutionaryalgorithm.cpp  evolutionaryalgorithm.h  individual.cpp  individual.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mutations.cpp  mutations.h  scenariodata.h  scenarioloader.cpp  scenarioloader.h  scenariotypes.h  scheduletypes.h
